--- a/src/maincontroller.ui
+++ b/src/maincontroller.ui
@@ -15,6 +15,9 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0" colspan="4">
+     <widget class="simGLView" name="glView"/>
+    </item>
     <item row="1" column="0">
      <layout class="QGridLayout" name="gridLayout_2">
       <property name="verticalSpacing">
@@ -422,6 +425,19 @@
       </item>
      </layout>
     </item>
+    <item row="1" column="1">
+     <spacer name="horizontalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="1" column="2">
      <layout class="QGridLayout" name="gridLayout_5">
       <item row="0" column="0" colspan="4">
@@ -605,22 +621,6 @@
       </item>
      </layout>
     </item>
-    <item row="0" column="0" colspan="4">
-     <widget class="simGLView" name="glView"/>
-    </item>
-    <item row="1" column="1">
-     <spacer name="horizontalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -642,18 +642,20 @@
     <property name="title">
      <string>Rover</string>
     </property>
-    <widget class="QMenu" name="menuView">
+    <widget class="QMenu" name="menuRoverView">
      <property name="title">
       <string>View</string>
      </property>
-     <addaction name="actionFree_view"/>
-     <addaction name="actionFollow_Rover"/>
+     <addaction name="actionFree_View"/>
+     <addaction name="actionRover_Center"/>
+     <addaction name="actionRover_Follow"/>
      <addaction name="actionRover_View"/>
-     <addaction name="actionPanCam_View"/>
+     <addaction name="actionRover_PanCam"/>
     </widget>
-    <addaction name="menuView"/>
+    <addaction name="actionNew_Rover"/>
+    <addaction name="menuRoverView"/>
    </widget>
-   <widget class="QMenu" name="menuTerrain_2">
+   <widget class="QMenu" name="menuTerrain">
     <property name="title">
      <string>Terrain</string>
     </property>
@@ -672,7 +674,7 @@
    </widget>
    <addaction name="menuWorld"/>
    <addaction name="menuRover"/>
-   <addaction name="menuTerrain_2"/>
+   <addaction name="menuTerrain"/>
    <addaction name="menuObstacles"/>
   </widget>
   <action name="actionRandomize_Obstacles">
@@ -709,19 +711,28 @@
     <string>Ctrl+E</string>
    </property>
   </action>
-  <action name="actionFree_view">
+  <action name="actionFree_View">
    <property name="text">
-    <string>Free view</string>
+    <string>Free View</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+1</string>
    </property>
   </action>
-  <action name="actionFollow_Rover">
+  <action name="actionRover_Follow">
    <property name="text">
-    <string>Follow Rover</string>
+    <string>Rover Follow</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+3</string>
    </property>
   </action>
   <action name="actionRover_View">
    <property name="text">
     <string>Rover View</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+4</string>
    </property>
   </action>
   <action name="actionSim_Timing">
@@ -739,9 +750,28 @@
     <string>Save Terrain</string>
    </property>
   </action>
-  <action name="actionPanCam_View">
+  <action name="actionRover_PanCam">
    <property name="text">
-    <string>PanCam View</string>
+    <string>Rover PanCam</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+5</string>
+   </property>
+  </action>
+  <action name="actionNew_Rover">
+   <property name="text">
+    <string>New Rover</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionRover_Center">
+   <property name="text">
+    <string>Rover Center</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+2</string>
    </property>
   </action>
  </widget>
