--- a/src/mainGUI.ui
+++ b/src/mainGUI.ui
@@ -398,6 +398,16 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="3" colspan="3">
+         <widget class="QLabel" name="labelRoverOdometer">
+          <property name="text">
+           <string>100000</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item row="0" column="6" rowspan="3" colspan="4">
