--- a/src/mainGUI.ui
+++ b/src/mainGUI.ui
@@ -654,6 +654,16 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="4">
+       <widget class="QLabel" name="labelDebug">
+        <property name="text">
+         <string>000</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item row="1" column="1">
