re-added rover info widget. It is built into the autocode object for easy display of rover obstacle avoidance settings. These settings need to be added hopefully using a tableView so they can be viewed/edited easier.

--- a/src/mainGUI.ui
+++ b/src/mainGUI.ui
@@ -746,6 +746,7 @@
     </widget>
     <addaction name="actionNew_Rover"/>
     <addaction name="menuRoverView"/>
+    <addaction name="actionShow_Rover_Info"/>
     <addaction name="separator"/>
     <addaction name="actionShow_Waypoint_Editor"/>
    </widget>
@@ -870,7 +871,12 @@
   </action>
   <action name="actionShow_Waypoint_Editor">
    <property name="text">
-    <string>Show Waypoint Info.</string>
+    <string>Waypoint Editor</string>
+   </property>
+  </action>
+  <action name="actionShow_Rover_Info">
+   <property name="text">
+    <string>Show Rover Info</string>
    </property>
   </action>
  </widget>
