--- a/src/tools/navigationtool.ui
+++ b/src/tools/navigationtool.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>283</width>
-    <height>150</height>
+    <height>300</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>283</width>
-    <height>0</height>
+    <height>300</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>283</width>
-    <height>150</height>
+    <height>300</height>
    </size>
   </property>
   <property name="cursor">
@@ -283,6 +283,9 @@ border-radius:10;
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <widget class="QTableWidget" name="paramTableWidget"/>
    </item>
   </layout>
  </widget>
