--- a/src/tools/obstacletool.ui
+++ b/src/tools/obstacletool.ui
@@ -74,6 +74,9 @@
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="singleStep">
+        <number>25</number>
+       </property>
       </widget>
      </item>
     </layout>
