--- a/src/tools/waypointtool.ui
+++ b/src/tools/waypointtool.ui
@@ -369,15 +369,21 @@ border-color:white;
       <widget class="QPushButton" name="buttonReset">
        <property name="minimumSize">
         <size>
-         <width>90</width>
-         <height>0</height>
+         <width>100</width>
+         <height>24</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>100</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{
 background:blue;
 border: 2px solid lightblue;
-border-radius:6px;
+border-radius:12px;
 color:white;}
 
 QPushButton:pressed{
@@ -390,19 +396,6 @@ border-color: yellow;
         <string>Reset States</string>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
