--- a/src/tools/pathtool.ui
+++ b/src/tools/pathtool.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>280</width>
-    <height>279</height>
+    <height>275</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>180</verstretch>
    </sizepolicy>
@@ -24,7 +24,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>280</width>
+    <width>492</width>
     <height>16777215</height>
    </size>
   </property>
