--- a/src/tools/waypointtool.ui
+++ b/src/tools/waypointtool.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>271</width>
-    <height>166</height>
+    <height>200</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>271</width>
-    <height>166</height>
+    <height>200</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -51,7 +51,7 @@
     <number>6</number>
    </property>
    <property name="bottomMargin">
-    <number>5</number>
+    <number>6</number>
    </property>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -227,13 +227,13 @@ border-color:white;
         <number>4</number>
        </property>
        <property name="topMargin">
-        <number>0</number>
+        <number>6</number>
        </property>
        <property name="rightMargin">
         <number>4</number>
        </property>
        <property name="bottomMargin">
-        <number>0</number>
+        <number>6</number>
        </property>
        <property name="horizontalSpacing">
         <number>-1</number>
@@ -248,14 +248,14 @@ border-color:white;
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="label_tscience">
          <property name="text">
           <string>Science</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="3" column="0">
         <widget class="QLabel" name="label_tposition">
          <property name="text">
           <string>Position</string>
@@ -272,7 +272,7 @@ border-color:white;
          </property>
         </widget>
        </item>
-       <item row="1" column="1" colspan="7">
+       <item row="2" column="1" colspan="7">
         <widget class="QComboBox" name="comboScience">
          <property name="layoutDirection">
           <enum>Qt::RightToLeft</enum>
@@ -282,7 +282,7 @@ border-color:white;
          </property>
         </widget>
        </item>
-       <item row="2" column="2" colspan="2">
+       <item row="3" column="2" colspan="2">
         <widget class="QLineEdit" name="lineEditPositionX">
          <property name="minimumSize">
           <size>
@@ -304,7 +304,7 @@ border-color:white;
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="QLabel" name="label_x">
          <property name="text">
           <string>X:</string>
@@ -314,7 +314,7 @@ border-color:white;
          </property>
         </widget>
        </item>
-       <item row="2" column="4">
+       <item row="3" column="4">
         <widget class="QLabel" name="label_y">
          <property name="text">
           <string>Y:</string>
@@ -324,7 +324,7 @@ border-color:white;
          </property>
         </widget>
        </item>
-       <item row="2" column="5" colspan="3">
+       <item row="3" column="5" colspan="3">
         <widget class="QLineEdit" name="lineEditPositionY">
          <property name="minimumSize">
           <size>
@@ -343,6 +343,16 @@ border-color:white;
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="7">
+        <widget class="QComboBox" name="comboState"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>State</string>
          </property>
         </widget>
        </item>
@@ -370,13 +380,13 @@ border-color:white;
        <property name="minimumSize">
         <size>
          <width>100</width>
-         <height>24</height>
+         <height>25</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>100</width>
-         <height>16777215</height>
+         <height>25</height>
         </size>
        </property>
        <property name="styleSheet">
