Waypoint tool and auto code objects are now connected. The user can set the current waypoint to drive to. Also, a single path can be computed as well as all paths in the list of the path tool.

--- a/src/tools/pathtool.ui
+++ b/src/tools/pathtool.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>280</width>
-    <height>275</height>
+    <width>469</width>
+    <height>187</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>280</width>
+    <width>380</width>
     <height>130</height>
    </size>
   </property>
@@ -51,16 +51,28 @@
     <widget class="QTableWidget" name="pathTableWidget"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="6,0,0,0,0,0,0,0">
      <property name="spacing">
       <number>12</number>
+     </property>
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>16</number>
      </property>
      <item>
       <widget class="QPushButton" name="buttonGenerate">
        <property name="minimumSize">
         <size>
-         <width>150</width>
+         <width>110</width>
          <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>110</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="styleSheet">
@@ -78,7 +90,7 @@ border-radius:10;
 </string>
        </property>
        <property name="text">
-        <string>Generate Path</string>
+        <string>Generate Single</string>
        </property>
        <property name="checkable">
         <bool>false</bool>
@@ -90,13 +102,60 @@ border-radius:10;
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>40</width>
+         <width>10</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="buttonGenAll">
+       <property name="minimumSize">
+        <size>
+         <width>110</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>120</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="sizeIncrement">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="baseSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton{
+background: blue;
+ border: 2px solid darkblue;
+ border-radius:10;
+color: white;}
+
+QPushButton:pressed{
+background: red;
+border: 2px solid darkred;
+border-radius:10;
+}</string>
+       </property>
+       <property name="text">
+        <string>Generate All</string>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
