--- a/src/tools/automatortool.ui
+++ b/src/tools/automatortool.ui
@@ -150,23 +150,17 @@ color: white;
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Obstacle Count</string>
+        <string>Obstacle Densities</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="spinBoxObstacleCount">
+      <widget class="QLineEdit" name="lineEditObstacleCount">
+       <property name="text">
+        <string>25,50,100</string>
+       </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
-       </property>
-       <property name="maximum">
-        <number>5000</number>
-       </property>
-       <property name="singleStep">
-        <number>20</number>
-       </property>
-       <property name="value">
-        <number>100</number>
        </property>
       </widget>
      </item>
