--- a/src/tools/obstacletool.ui
+++ b/src/tools/obstacletool.ui
@@ -38,8 +38,8 @@
    <property name="spacing">
     <number>-1</number>
    </property>
-   <property name="leftMargin">
-    <number>12</number>
+   <property name="margin">
+    <number>6</number>
    </property>
    <item>
     <layout class="QGridLayout" name="gridLayout">
@@ -451,13 +451,13 @@
        <property name="minimumSize">
         <size>
          <width>100</width>
-         <height>30</height>
+         <height>20</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>100</width>
-         <height>30</height>
+         <height>20</height>
         </size>
        </property>
        <property name="styleSheet">
@@ -469,53 +469,40 @@ border-radius:10px;
 }
 
 QPushButton:pressed{
-background:grey;
-border-color:darkgrey;
+background:red;
+border-color:darkred;
 }</string>
        </property>
        <property name="text">
-        <string>Generate</string>
+        <string>Generate All</string>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="ButtonCancel">
        <property name="minimumSize">
         <size>
          <width>100</width>
-         <height>30</height>
+         <height>20</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>100</width>
-         <height>30</height>
+         <height>20</height>
         </size>
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{
-background:rgb(255, 0, 0); 
-color:white; 
-border:2px solid rgb(169, 2, 6); 
+background:yellow; 
+color:black; 
+border:2px solid white; 
 border-radius:10px;
 }
 
 QPushButton:pressed{
-background:grey;
-border-color:darkgrey;
+background:red;
+border-color:darkred;
 }</string>
        </property>
        <property name="text">
